--- a/cleanweek.html
+++ b/cleanweek.html
@@ -168,7 +168,7 @@
                 </div>
             </div>
         </div>
-        <div class="right">
+        <div class="imgsofa">
             <img src="./pic/sofapic.png" width="100%" alt="greysofa">
         </div>
     </div>
